<resources>
    <string name="app_name">Newsgeek</string>
    <string name="authentification">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="rpassword">Reenter your password :</string>
    <string name="password">Password</string>
    <string name="btnConnect">Sign in</string>
    <string name="btnSignUp">Sign up</string>
    <string name="signupText">You do not have an account ?</string>
    <string name="signupLink">Sign Up</string>

    <string name="invalid">Your email or password are wrong</string>
    <string name="invalid_email">Please enter email</string>
    <string name="invalid_userName">Please enter User Name</string>
    <string name="email_not_found">Email not found</string>
    <string name="invalid_pass">Please enter a password</string>
    <string name="re_pass_fail">Please insert password verification</string>
    <string name="pass_not_same">Passwords are not the same</string>
    <string name="verify_email_pass">Check your email or password</string>
    <string name="error_connect">No connection</string>
    <string name="connected">You are connected</string>
    <string name="dic_connected">You are disconnected</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">Notifications</string>
    <string name="channel_description">Welcome Message</string>

    // Notifications
    <string name="succes_register">Your account has been created</string>
    <string name="succes_login"> Welcome  </string>
    <string name="notif_login_account">Bonjour</string>
    <string name="notif_new_account"> Nice </string>


    //Preferences
    <string name="Newsletter">Newsletter</string>
    <string name="Suscribe_newsletter">Suscribing</string>
    <string name="general">General</string>
    <string name="theme">Dark</string>
    <string name="mode_dark">Mode Dark</string>
    <string name="languages">Languages</string>
    <string name="choice_languages">Choise your languages</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="switch_account">Switch account</string>
    <string name="disconnection">Log out</string>
    <string name="post_title">Post Tile Goes here</string>
    <string name="post_desc">"The post description goes here "</string>
    <string name="title_watch">Watch</string>

    <string-array name="languages_array">
        <item>@string/french</item>
        <item>@string/english</item>
    </string-array>

    <string name="progressD">Buffering Please Wait</string>
    <string name="textSignup">"Create an account to acces all features. Sign up with your adress e-mail "</string>
    <string name="return_button"> Return </string>


</resources>