<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/textColor"
    tools:context=".controllers.fragments.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="326dp"
        android:padding="70dp"
        android:src="@drawable/ic_newspaper" />


    <TextView
        android:id="@+id/textViewAud"
        android:layout_marginTop="0dp"
        android:textAlignment="center"
        android:padding="15dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="15"
        android:shadowColor="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/background"
        android:text="@string/authentification" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:textSize="18dp"
        android:textStyle="italic"
        android:text="@string/email"
        android:textColor="@color/background"
        />

    <EditText
        android:id="@+id/edt_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textStyle="italic"
        android:layout_marginLeft="25dp"
        android:text="@string/password"
        android:textColor="@color/background"
        />

    <EditText
        android:id="@+id/edt_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
           android:id="@+id/btn_login"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="20dp"
           android:textStyle="bold"
           android:textSize="16dp"
           android:background="@drawable/background_auth"
           android:textColor="@android:color/black"
           android:text="@string/btnConnect" />

     <TextView
           android:id="@+id/textViewLinkSingup"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/background"
           android:layout_marginTop="0dp"
           android:layout_marginLeft="5dp"
           android:textAlignment="center"
           android:text="@string/signupText" />

     <Button
            android:id="@+id/btn_submit_intent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:background="@drawable/background_auth"
            android:textColor="@android:color/black"
            android:text="@string/signupLink" />

     </LinearLayout>
    </ScrollView>

</RelativeLayout>