<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".controllers.fragments.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="199dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/video" />

            <TextView
                android:id="@+id/txtViewAud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:text="@string/user_name"
                android:textColor="@color/textColor" />

            <EditText
                android:id="@+id/register_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="0dp"
                android:text="@string/email"
                android:textColor="@color/textColor" />


            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txtAddVPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/password"
                android:textColor="@color/textColor" />

            <EditText
                android:id="@+id/register_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:ems="10"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="175dp"
                android:layout_marginTop="30dp"
                android:text="@string/btnSignUp" />
        </LinearLayout>

    </ScrollView>


</FrameLayout>