<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.fragments.SingleViewContent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/post_single_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:srcCompat="@mipmap/ic_launcher">

        </ImageView>

        <TextView
            android:id="@+id/post_single_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/post_title"
            android:textSize="16sp">

        </TextView>

        <TextView
            android:id="@+id/post_single_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/post_desc">

        </TextView>

        <Button
            android:id="@+id/return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_button"
            />

    </LinearLayout>


</RelativeLayout>